--- a/index.html
+++ b/index.html
@@ -5,11 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>두둑(Doodook) 투자 성향 테스트</title>
     <style>
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff') format('woff');
+        font-weight: 100;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraLight.woff') format('woff');
+        font-weight: 200;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
+        font-weight: 300;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+        font-weight: 400;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
+        font-weight: 500;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
+        font-weight: 600;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff') format('woff');
+        font-weight: 700;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff') format('woff');
+        font-weight: 800;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Pretendard';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff') format('woff');
+        font-weight: 900;
+        font-display: swap;
+      }
+
       body {
         margin: 0;
         padding: 0;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-          sans-serif;
+        font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", sans-serif;
       }
       #root {
         width: 100%;
@@ -880,208 +942,240 @@
                   {
                     style: {
                       width: "100%",
-                      padding: "20px",
-                      backgroundColor: "rgba(212, 221, 239, 0.1)",
-                      borderRadius: "15px",
+                      display: "flex",
+                      justifyContent: "center",
+                      //marginBottom: "30px",
+                    },
+                  },
+                  React.createElement("img", {
+                    src: "./src/images/type-graph-bg.png",
+                    alt: "투자 유형 척도",
+                    style: {
+                      width: "70%",
+                      height: "auto",
+                      display: "block",
+                    },
+                  })
+                ),
+                React.createElement(
+                  "div",
+                  {
+                    style: {
+                      width: "100%",
+                      display: "flex",
+                      justifyContent: "center",
                       marginBottom: "30px",
                     },
                   },
                   React.createElement(
-                    "h4",
+                    "div",
                     {
                       style: {
-                        textAlign: "center",
-                        color: "#6EE69E",
-                        fontSize: "16px",
-                        fontWeight: "bold",
-                        marginBottom: "20px",
-                        marginTop: "0",
+                        width: "75%",
+                        padding: "23px",
+                        //backgroundColor: "rgba(212, 221, 239, 0.1)",
+                        borderRadius: "15px",
+                        fontWeight: "800",
                       },
                     },
-                    "유형 척도 그래프"
-                  ),
-                  React.createElement(
-                    "div",
-                    { style: { marginBottom: "15px" } },
+
                     React.createElement(
-                      "div",
+                      "h4",
                       {
                         style: {
-                          display: "flex",
-                          justifyContent: "space-between",
-                          marginBottom: "5px",
+                          textAlign: "center",
+                          color: "#6EE69E",
+                          fontSize: "16px",
+                          fontWeight: "bold",
+                          marginBottom: "20px",
+                          marginTop: "0",
                         },
-                      },
+                      }
+                      //"유형 척도 그래프"
+                    ),
+                    React.createElement(
+                      "div",
+                      { style: { marginBottom: "15px" } },
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#6EE69E" } },
-                        "S"
+                        "div",
+                        {
+                          style: {
+                            display: "flex",
+                            justifyContent: "space-between",
+                            marginBottom: "5px",
+                          },
+                        },
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#6EE69E" } },
+                          "S"
+                        ),
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#F074BA" } },
+                          "R"
+                        )
                       ),
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#F074BA" } },
-                        "R"
+                        "div",
+                        {
+                          style: {
+                            height: "4px",
+                            backgroundColor: "rgba(255,255,255,0.2)",
+                            borderRadius: "2px",
+                            position: "relative",
+                          },
+                        },
+                        React.createElement("div", {
+                          style: {
+                            position: "absolute",
+                            left: result[0] === "S" ? "20%" : "80%",
+                            top: "-3px",
+                            width: "10px",
+                            height: "10px",
+                            backgroundColor: "#6EE69E",
+                            borderRadius: "50%",
+                          },
+                        })
                       )
                     ),
                     React.createElement(
                       "div",
-                      {
-                        style: {
-                          height: "4px",
-                          backgroundColor: "rgba(255,255,255,0.2)",
-                          borderRadius: "2px",
-                          position: "relative",
-                        },
-                      },
-                      React.createElement("div", {
-                        style: {
-                          position: "absolute",
-                          left: result[0] === "S" ? "20%" : "80%",
-                          top: "-3px",
-                          width: "10px",
-                          height: "10px",
-                          backgroundColor: "#6EE69E",
-                          borderRadius: "50%",
-                        },
-                      })
-                    )
-                  ),
-                  React.createElement(
-                    "div",
-                    { style: { marginBottom: "15px" } },
-                    React.createElement(
-                      "div",
-                      {
-                        style: {
-                          display: "flex",
-                          justifyContent: "space-between",
-                          marginBottom: "5px",
-                        },
-                      },
+                      { style: { marginBottom: "15px" } },
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#6EE69E" } },
-                        "D"
+                        "div",
+                        {
+                          style: {
+                            display: "flex",
+                            justifyContent: "space-between",
+                            marginBottom: "5px",
+                          },
+                        },
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#6EE69E" } },
+                          "D"
+                        ),
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#F074BA" } },
+                          "F"
+                        )
                       ),
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#F074BA" } },
-                        "F"
+                        "div",
+                        {
+                          style: {
+                            height: "4px",
+                            backgroundColor: "rgba(255,255,255,0.2)",
+                            borderRadius: "2px",
+                            position: "relative",
+                          },
+                        },
+                        React.createElement("div", {
+                          style: {
+                            position: "absolute",
+                            left: result[1] === "D" ? "20%" : "80%",
+                            top: "-3px",
+                            width: "10px",
+                            height: "10px",
+                            backgroundColor: "#6EE69E",
+                            borderRadius: "50%",
+                          },
+                        })
                       )
                     ),
                     React.createElement(
                       "div",
-                      {
-                        style: {
-                          height: "4px",
-                          backgroundColor: "rgba(255,255,255,0.2)",
-                          borderRadius: "2px",
-                          position: "relative",
-                        },
-                      },
-                      React.createElement("div", {
-                        style: {
-                          position: "absolute",
-                          left: result[1] === "D" ? "20%" : "80%",
-                          top: "-3px",
-                          width: "10px",
-                          height: "10px",
-                          backgroundColor: "#6EE69E",
-                          borderRadius: "50%",
-                        },
-                      })
-                    )
-                  ),
-                  React.createElement(
-                    "div",
-                    { style: { marginBottom: "15px" } },
-                    React.createElement(
-                      "div",
-                      {
-                        style: {
-                          display: "flex",
-                          justifyContent: "space-between",
-                          marginBottom: "5px",
-                        },
-                      },
+                      { style: { marginBottom: "15px" } },
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#6EE69E" } },
-                        "V"
+                        "div",
+                        {
+                          style: {
+                            display: "flex",
+                            justifyContent: "space-between",
+                            marginBottom: "5px",
+                          },
+                        },
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#6EE69E" } },
+                          "V"
+                        ),
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#F074BA" } },
+                          "G"
+                        )
                       ),
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#F074BA" } },
-                        "G"
+                        "div",
+                        {
+                          style: {
+                            height: "4px",
+                            backgroundColor: "rgba(255,255,255,0.2)",
+                            borderRadius: "2px",
+                            position: "relative",
+                          },
+                        },
+                        React.createElement("div", {
+                          style: {
+                            position: "absolute",
+                            left: result[2] === "V" ? "20%" : "80%",
+                            top: "-3px",
+                            width: "10px",
+                            height: "10px",
+                            backgroundColor: "#6EE69E",
+                            borderRadius: "50%",
+                          },
+                        })
                       )
                     ),
                     React.createElement(
                       "div",
-                      {
-                        style: {
-                          height: "4px",
-                          backgroundColor: "rgba(255,255,255,0.2)",
-                          borderRadius: "2px",
-                          position: "relative",
-                        },
-                      },
-                      React.createElement("div", {
-                        style: {
-                          position: "absolute",
-                          left: result[2] === "V" ? "20%" : "80%",
-                          top: "-3px",
-                          width: "10px",
-                          height: "10px",
-                          backgroundColor: "#6EE69E",
-                          borderRadius: "50%",
-                        },
-                      })
-                    )
-                  ),
-                  React.createElement(
-                    "div",
-                    {},
-                    React.createElement(
-                      "div",
-                      {
-                        style: {
-                          display: "flex",
-                          justifyContent: "space-between",
-                          marginBottom: "5px",
-                        },
-                      },
+                      {},
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#6EE69E" } },
-                        "H"
+                        "div",
+                        {
+                          style: {
+                            display: "flex",
+                            justifyContent: "space-between",
+                            marginBottom: "5px",
+                          },
+                        },
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#6EE69E" } },
+                          "H"
+                        ),
+                        React.createElement(
+                          "span",
+                          { style: { fontSize: "14px", color: "#F074BA" } },
+                          "Q"
+                        )
                       ),
                       React.createElement(
-                        "span",
-                        { style: { fontSize: "14px", color: "#F074BA" } },
-                        "Q"
+                        "div",
+                        {
+                          style: {
+                            height: "4px",
+                            backgroundColor: "rgba(255,255,255,0.2)",
+                            borderRadius: "2px",
+                            position: "relative",
+                          },
+                        },
+                        React.createElement("div", {
+                          style: {
+                            position: "absolute",
+                            left: result[3] === "H" ? "20%" : "80%",
+                            top: "-3px",
+                            width: "10px",
+                            height: "10px",
+                            backgroundColor: "#6EE69E",
+                            borderRadius: "50%",
+                          },
+                        })
                       )
-                    ),
-                    React.createElement(
-                      "div",
-                      {
-                        style: {
-                          height: "4px",
-                          backgroundColor: "rgba(255,255,255,0.2)",
-                          borderRadius: "2px",
-                          position: "relative",
-                        },
-                      },
-                      React.createElement("div", {
-                        style: {
-                          position: "absolute",
-                          left: result[3] === "H" ? "20%" : "80%",
-                          top: "-3px",
-                          width: "10px",
-                          height: "10px",
-                          backgroundColor: "#6EE69E",
-                          borderRadius: "50%",
-                        },
-                      })
                     )
                   )
                 ),
