--- a/index.html
+++ b/index.html
@@ -6,64 +6,73 @@
     <title>두둑(Doodook) 투자 성향 테스트</title>
     <style>
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff")
+          format("woff");
         font-weight: 100;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraLight.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraLight.woff")
+          format("woff");
         font-weight: 200;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff")
+          format("woff");
         font-weight: 300;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+          format("woff");
         font-weight: 400;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff")
+          format("woff");
         font-weight: 500;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff")
+          format("woff");
         font-weight: 600;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff")
+          format("woff");
         font-weight: 700;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff")
+          format("woff");
         font-weight: 800;
         font-display: swap;
       }
 
       @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff') format('woff');
+        font-family: "Pretendard";
+        src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff")
+          format("woff");
         font-weight: 900;
         font-display: swap;
       }
@@ -71,7 +80,8 @@
       body {
         margin: 0;
         padding: 0;
-        font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", sans-serif;
+        font-family: "Pretendard", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          "Roboto", sans-serif;
       }
       #root {
         width: 100%;
@@ -897,7 +907,7 @@
                     style: {
                       fontSize: "16px",
                       color: "#FFFFFF",
-                      marginBottom: "10px",
+                      //marginBottom: "10px",
                     },
                   },
                   "당신의 투자 유형은"
@@ -909,7 +919,7 @@
                       fontSize: "32px",
                       fontWeight: "bold",
                       color: "#FFFFFF",
-                      marginBottom: "30px",
+                      marginBottom: "15px",
                     },
                   },
                   typeInfo.alias
@@ -919,8 +929,8 @@
                   {
                     style: {
                       width: "100%",
-                      maxWidth: "300px",
-                      margin: "0 auto 30px",
+                      maxWidth: "240px",
+                      margin: "0 auto 20px",
                       display: "flex",
                       alignItems: "center",
                       justifyContent: "center",
@@ -951,7 +961,7 @@
                     src: "./src/images/type-graph-bg.png",
                     alt: "투자 유형 척도",
                     style: {
-                      width: "70%",
+                      width: "90%",
                       height: "auto",
                       display: "block",
                     },
@@ -971,7 +981,7 @@
                     "div",
                     {
                       style: {
-                        width: "75%",
+                        width: "90%",
                         padding: "23px",
                         //backgroundColor: "rgba(212, 221, 239, 0.1)",
                         borderRadius: "15px",
