--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
         {
           id: 3,
           axis: "SR",
-          question: "갑자기 주식이 큰 폭으로 오르거나 내렸을 때, 당신은?",
+          question: "새로운 직장에 취직할 때, 회사 선택 기준은?",
           optionA: {
-            text: "갑자기 변동성이 크니까 좀 더 안정될 때까지 기다려야겠어.",
+            text: "안정적인 회사와 명확한 경로가 있는 곳을 선호해. 일자리가 보장되는 곳이 좋지.",
             value: "S",
           },
           optionB: {
-            text: "이런 변동성이 기회! 내가 지금 들어가면 더 큰 수익을 낼 수 있을 것 같아",
+            text: "빠르게 성장할 수 있는 가능성이 있는 작은 회사나 스타트업에서 도전해보고 싶어.",
             value: "R",
           },
         },
@@ -199,7 +199,7 @@
           id: 5,
           axis: "FD",
           question:
-            "새로운 기업중 최근 급성장한 회사가 있다고 주위에서 들었을 때 나는?",
+            "새로운 기업 중 최근 급성장한 회사가 있다고 주위에서 들었을 때 나는?",
           optionA: {
             text: "그 기업이 시장에서 주목받고 있는 이유를 분석하고, 그 트렌드를 따라가고 싶다.",
             value: "F",
@@ -212,13 +212,13 @@
         {
           id: 6,
           axis: "FD",
-          question: "최신 기술을 개발한 기업의 소식을 들었을 때, 첫 반응은?",
+          question: '친구가 "이 영화 진짜 재밌다!"고 추천했을 때, 당신은?',
           optionA: {
-            text: "새로운 기술이 뜬다고? 그 시장에 투자할 준비가 되어 있어. 흐름을 놓치지 말아야겠다.",
+            text: "영화의 장르와 사람들이 좋아하는 이유가 궁금하니까 일단 분위기를 파악하려고 리뷰나 트레일러를 확인해볼 거야.",
             value: "F",
           },
           optionB: {
-            text: "그 기술이 정말 시장에서 경쟁력을 갖출지, 그 기업의 수익성부터 분석해봐야겠어.",
+            text: "리뷰나 평가를 봤을 때, 어떤 사람들이 좋다고 했는지 확인하고, 그것이 나에게 맞을지 고민해본다.",
             value: "D",
           },
         },
@@ -247,13 +247,13 @@
         {
           id: 9,
           axis: "VG",
-          question: "당신이 선물로 주식을 받는다면?",
+          question: "여행지를 고를 때 어떤 스타일을 선호하시나요?",
           optionA: {
-            text: "이자 꼬박꼬박 나오는 우량주! 이런 건 평생 가져가야지.",
+            text: '"휴양지에서 여유롭게 쉬는 게 최고지!" 바다와 함께 힐링한다.',
             value: "V",
           },
           optionB: {
-            text: "지금은 작아도 미래에 대박 날 기업! 성장주가 로망이야!",
+            text: '"모험이 필요해!" 새로운 문화와 활동을 경험할 수 있는 곳을 선호한다.',
             value: "G",
           },
         },
@@ -284,13 +284,13 @@
         {
           id: 12,
           axis: "HQ",
-          question: "당신이 생각하는 '성공적인 투자'란?",
+          question: "큰 프로젝트를 진행 할 때 어떻게 목표를 설정하나요?",
           optionA: {
-            text: "묻어두고 신경 안 써도 안정적인 수익을 내는 투자!",
+            text: "큰 그림을 그리고, 그 목표를 향해 꾸준히 나아가는 편이야. 한 단계씩 밟아가며.",
             value: "H",
           },
           optionB: {
-            text: "빠르게 사고팔면서 최대한의 수익을 뽑아내는 투자!",
+            text: "짧은 기간 안에 결과를 보고 싶은 마음이 커. 빠르게 진행해서 성과를 내는 게 좋아.",
             value: "Q",
           },
         },
